--- a/sandiegoHoteis2025/.guia-sandiego-instalacao.html
+++ b/sandiegoHoteis2025/.guia-sandiego-instalacao.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Guia de Instalação - San Diego Hotéis 2025</title>
   <style>
     body {
@@ -62,7 +63,8 @@
 
   <h2>2. Importar campos ACF</h2>
   <p>Para que todos os campos personalizados funcionem corretamente, importe os arquivos JSON localizados em
-    <code>acf-json/</code>:</p>
+    <code>acf-json/</code>:
+  </p>
   <ul>
     <li><code>group_sd_hoteis.json</code> <button class="copy-btn" data-copy="group_sd_hoteis.json"
         onclick="copyText(this)">📋</button></li>
